--- a/ps1/plots.ipynb
+++ b/ps1/plots.ipynb
@@ -1,15 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "Go to http://research.stlouisfed.org/fred2/series/SP500/downloaddata and download S&P 500 data for the last 10 years. You will get a time\n",
+    "series of prices $P_t$, $t = 1,\\ldots,T$. Then, compute the returns ignoring dividends $R_{t+1} = P_{t+1}/{P_t}$\n",
+    "Plot the empirical distribution of $R_t − 1$ and of $\\log R_t$.\n",
+    "What does it look like? Does it look like normal ? You can use Matlab functions hist, histfit, and normfit"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm\n",
     "import numpy as np\n",
-    "import math\n",
+    "import math"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "df = pd.read_csv('SP500.csv')\n",
     "\n",
+    "returns = [1]\n",
+    "for i in range(len(df)-1):\n",
+    "    values = df.loc[i:i+1, 'SP500']\n",
+    "    if values[i+1] == '.' or values[i] == '.':\n",
+    "        rate = np.NaN\n",
+    "    else:\n",
+    "        rate = float(values[i+1]) / float(values[i])\n",
+    "    returns.append(rate)\n",
+    "    \n",
+    "df['returns'] = returns\n",
+    "\n",
+    "df['r-1'] = df['returns'] - 1\n",
+    "\n",
+    "df['log_r'] = np.log(df['returns'])\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
     "df = pd.read_pickle('transformed.pkl')\n",
     "\n",
     "fit = [x for x in df['r-1'] if math.isnan(x) == False]\n",
@@ -32,7 +73,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 3
     },
     {
      "output_type": "display_data",
@@ -51,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "source": [
     "fit = [x for x in df['log_r'] if math.isnan(x) == False]\n",
     "mu, std = norm.fit(fit)\n",
@@ -73,7 +114,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 4
     },
     {
      "output_type": "display_data",
@@ -88,33 +129,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "np.sum(df['r-1'])"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1.383853685132948"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
