--- a/latex/main.tex
+++ b/latex/main.tex
@@ -15,11 +15,11 @@
 \include{macro}
 
 
-\title{Stochastic Calculus - Problem Set 2}
-\author{Irene Cusiné, Hilda Horváth and Benedek Harsányi}
-\date{28. September 2021.}
+\title{Stochastic Calculus - Problem Set 5}
+\author{Irene Cusiné, Hilda Horváth, Benedek Harsányi and Vireak Prou}
+\date{25. October 2021.}
 
 \begin{document}
 \maketitle
-\input{ps2.tex}
+\input{ps5.tex}
 \end{document}
