--- a/latex/macro.tex
+++ b/latex/macro.tex
@@ -8,16 +8,20 @@
 
 \newcommand{\dx}{\mathrm{d}x}
 \newcommand{\dt}{\mathrm{d}t}
+\newcommand{\dy}{\mathrm{d}y}
+\newcommand{\dz}{\mathrm{d}z}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 
+%substitute dummy variable
+\newcommand{\dummy}[1]{\bigg\rvert_{#1}}
 %basic probabilities
 \newcommand{\pr}[1]{\mathbb{P}\left( #1 \right)}
 \newcommand{\cpr}[2]{\mathbb{P}\left( #1 \mid #2 \right)}
 \newcommand{\E}[1]{\mathbb{E}\left( #1 \right)}
 \newcommand{\cE}[2]{\mathbb{E}\left( #1 \mid #2 \right)}
-
-\newcommand{\ind}[1]{\mathbb{1}_{#1}}
+\newcommand{\F}[1]{\mathcal{F}_{#1}} 
+\newcommand{\ind}[1]{\mathbb{1}_{\{#1\}}}      
 
 %random variables
 \newcommand{\gauss}[2]{\mathcal{N}(#1, #2)}
