--- a/latex/main.tex
+++ b/latex/main.tex
@@ -15,11 +15,11 @@
 \include{macro}
 
 
-\title{Stochastic Calculus - Problem Set 5}
-\author{Irene Cusiné, Hilda Horváth, Benedek Harsányi and Vireak Prou}
-\date{25. October 2021.}
+\title{Stochastic Calculus - Problem Set 6}
+\author{Irene Cusiné, Hilda Horváth and Benedek Harsányi}
+\date{1. November 2021.}
 
 \begin{document}
 \maketitle
-\input{ps5.tex}
+\input{ps6.tex}
 \end{document}
